JIRA patch OFBIZ-75
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4291 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/order/config/OrderUiLabels.properties
+++ b/components/order/config/OrderUiLabels.properties
@@ -51,6 +51,10 @@ cart.category_not_specified_to_add_from=No category specified to add from.
 cart.could_not_get_products_in_category=Could not get products in category ${categorieId} to add to cart {read error}.
 cart.could_not_get_products_in_category_cart=Could not get products in category ${categorieId} to add to cart {read error}: ${message}.
 
+cart.product_not_valid_for_supplier=This product cannot be purchased from the chosen supplier for the given quantity and currency.
+cart.agreement_not_specified_to_add_from=No agreement specified to add from.
+cart.could_not_get_agreement=Could not get agreement through ${agreementId} {read error}: ${message}.
+
 # ${productId} productId of Product
 cart.could_not_add_product_to_cart=Could NOT add product ${productId} to cart.
 checkevents.cart_empty=Cart is empty.
@@ -90,6 +94,8 @@ checkhelper.totals_do_not_match_order_total=Totals do not match order total.
 # ${order} =Errormessage
 checkhelper.sales_order_lines_lookup_failed=ERROR: Sales Order Lines lookup failed.
 checkhelpertotalsdonotmatchordertotal=Totals do not match order total.
+checkhelper.specify_if_shipBeforeDate_is_date=Please specify a ship before date as a date.
+checkhelper.specify_if_shipAfterDate_is_date=Please specify ship after date as a date.
 
 EcommerceAddAlltoCart=Add All to Cart
 EcommerceAddCheckedtoCart=Add Checked to Cart
@@ -257,6 +263,17 @@ OrderUseDefaultComment=Use as default comment for next entry
 OrderUseDefaultDesiredDeliveryDate=Use as default desired delivery date for next entry
 OrderViewEditDelivery=View/Delivery Schedule Info
 OrderViewPermissionError=You do not have permission to view this page. ("ORDERMGR_VIEW" or "ORDERMGR_ADMIN" needed)
+OrderSelectAgreement=Select an agreement for this order
+OrderSelectCurrency=Or set a currency for this order
+OrderOrderTermType=Term Type
+OrderOrderTermValue=Term Value
+OrderOrderTermDays=Term Days
+OrderOrderTerms=Order Terms
+OrderOrderEntryOrderTerms=Order Entry Order Terms
+OrderShipBeforeDate=Ship Before Date
+OrderShipAfterDate=Ship After Date
+
+
 
 PageTitleLogin=Login
 PartyFindParty=Find Party
