Some little cleanups (added uilabels, menu fixes, etc...).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4337 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/accounting/config/AccountingUiLabels.properties
+++ b/components/accounting/config/AccountingUiLabels.properties
@@ -9,6 +9,13 @@ AccountingInvoicesMenu=Invoices
 AccountingPaymentsMenu=Payments
 AccountingChartOfAcctsMenu=Chart of Accounts
 AccountingManualTxMenu=Manual Tx
+AccountingAgreement=Agreement
+AccountingAgreements=Agreements
+AccountingNewAgreement=Create Agreement
+AccountingNewAgreementItem=Create Agreement Item
+AccountingNewAgreementTerm=Create Agreement Term
+AccountingAgreementItems=Agreement Items
+AccountingAgreementTerms=Agreement Terms
 AccountingAccount=Account
 AccountingAccountId=Account ID
 AccountingAccountLimit=Account Limit
