Fixed up a few labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4347 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/manufacturing/config/ManufacturingUiLabels.properties
+++ b/components/manufacturing/config/ManufacturingUiLabels.properties
@@ -93,13 +93,7 @@ ManufacturingNewRoutingTask=New Routing Task
 ManufacturingNoCalendarFound=No calendar found
 ManufacturingNoMachineGroupFound=No machine group found
 ManufacturingNoProductionRunSelected=No ProductionRun Selected
-ManufacturingPartBOMType=Bill Of Materials Type
-ManufacturingPartBreakdown=Part Breakdown
-ManufacturingPartDepth=Part Depth
-ManufacturingPartId=Part ID
-ManufacturingPartName=Part Name
-ManufacturingParts=Parts
-ManufacturingPartType=Part Type
+ManufacturingProductLevel=Product Level
 ManufacturingProductAssocNotExist=ProductAssoc does not exist
 ManufacturingProductComponents=Components of this Product
 ManufacturingProductComponentOf=This Product is a Component of
@@ -138,7 +132,7 @@ ManufacturingRoutingTaskAssocCreateSuccessfully=RoutingTask association creation
 ManufacturingRoutingTaskCopiedSuccessfully=RoutingTask copied Successfully
 ManufacturingRoutingTaskId=Routing Task Id
 ManufacturingRoutingTaskToMissing=RoutingTask To is Missing
-ManufacturingRunningMrp=Running MRP
+ManufacturingRunMrp=Run MRP
 ManufacturingScrapFactor=Scap Factor
 ManufacturingStartDate=Start Date
 ManufacturingStartTime=Start Time
@@ -231,3 +225,7 @@ ProductProductInternalName=Internal Name
 ProductProductName=Product Name 
 ProductProductType=Product Type
 
+
+ManufacturingBomType=Bom Type
+
+ManufacturingBomSimulation=Bom Simulation
