Added i18n plus english l10n of messages.ftl; initial changes from Malin Nicolas
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4383 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/common/config/CommonUiLabels.properties
+++ b/components/common/config/CommonUiLabels.properties
@@ -142,6 +142,8 @@ CommonFind=Find
 CommonFindAll=Find All
 CommonFinishDate=Finish Date
 CommonFinishDate=Finish Date/Time
+CommonFollowingErrorsOccurred=The Following Errors Occurred
+CommonFollowingOccurred=The Following Occurred
 CommonFor=For
 CommonForgotYourPassword=Forgot Your Password
 CommonFormatDateFieldNotCorrect=One of the date field is incorrect, format must be AAAA-mm-jj HH:mm:ss
@@ -249,6 +251,7 @@ CommonRemove=Remove
 CommonRemoveExpired=Remove Expired 
 CommonReports=Reports
 CommonRequired=Required
+CommonRequiredFieldsFoundEmpty=The Following Required Fields Where Found Empty
 CommonReset=Reset
 CommonResultLookup=Result of lookup
 CommonReturn=Return
@@ -329,4 +332,8 @@ CommonZipPostalCode=Zip/Postal Code
 
 Factoids=Did you know?
 MostRecentlyViewed=Recently Viewed
+
+PartyPartyID=Party ID
+PartyContactMechID=Contact Mechanism ID
+PartyContactPurpose=Contact Purpose
 
