Added patch from Brett Palmer for some more GL related accounting screens, plus some cleanups of the AccountingScreens.xml file
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4400 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/accounting/config/AccountingUiLabels.properties
+++ b/components/accounting/config/AccountingUiLabels.properties
@@ -2,6 +2,18 @@
 #
 ####
 
+AcctgGlPartyLabel=GL Party:
+AcctgGlAcctLabel=GL Account:
+AcctgEditGlJournalEntry=Journal Entry
+AcctgAssignGlAccount=Assign GL Account
+AcctgChartOfAcctsTabMenu=Chart of Accounts
+AcctgListGlAcctOrg=List GL Organization
+AcctgNavigateAccts=Navigate Accounts
+AcctgGlFiscalTypeLable=Fiscal Type:
+AcctgGlJrnlDescLabel=Description:
+AcctgGlJrnlIdLabel=GL Journal ID:
+AcctgGlJrnlIdToolTip=Non-editable System ID
+
 ListAccounts=List Gl Accounts
 AccountingMainMenu=Main
 AccountingBillingMenu=Billing Accounts
