Fixed innacurate property name
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4405 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/common/config/general.properties
+++ b/components/common/config/general.properties
@@ -13,7 +13,7 @@ currency.uom.id.default=USD
 currency.decimal.format=##0.00
 
 # -- the default country for drop downs
-country.uom.id.default=USA
+country.geo.id.default=USA
 
 # -- the default trackingCodeId to use for Partner Managed Tracking Codes
 partner.trackingCodeId.default=
