--- a/components/common/config/CommonUiLabels.properties
+++ b/components/common/config/CommonUiLabels.properties
@@ -49,7 +49,6 @@ Party=Party
 WebTools=WebTools
 WorkEffort=WorkEffort
 
-
 CommonAccepted=Accepted
 CommonAccounting=Accounting
 CommonActiveInactive=Active and Inactive
@@ -59,6 +58,7 @@ CommonAddA=Add a
 CommonAddDefault=Add Default
 CommonAddId=Add ID
 CommonAddNew=Add New
+CommonAddresses=Addresses
 CommonAddressLine=Address Line
 CommonAll=All
 CommonAllDay=All Day
@@ -77,6 +77,7 @@ CommonAnyWebSite=Any Web Site
 CommonApply=Apply
 CommonApril=April
 CommonArea=Area
+CommonAreaCode=Area Code
 CommonAt=At
 CommonAttentionName=Attention Name
 CommonAttn=Attn
@@ -101,6 +102,7 @@ CommonComingSoon=Coming Soon\!
 CommonComment=Comment
 CommonComments=Comments
 CommonContactUs=Contact Us
+CommonContacts=Contacts
 CommonContent=Content
 CommonContinue=Continue
 CommonCopy=Copy 
@@ -185,6 +187,7 @@ CommonLoginHere=log in here
 CommonLogout=Logout
 CommonLookup=Lookup
 CommonMain=Main
+CommonManager=Manager
 CommonMarch=March
 CommonMatched=Matched
 CommonMay=May
@@ -227,6 +230,8 @@ CommonOpenNewWindow=Open in New Window
 CommonOpenPageNewWindow=open page in new window
 CommonOptions=Options
 CommonOr=OR
+CommonOrder=Order
+CommonOrders=Orders
 CommonOverridesSelection=(overrides either of the above selections.)
 CommonPassword=Password
 CommonPerson=Person
