Changed checkout links to make a clear distinction between Checkout and Quick Checkout
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4515 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/ecommerce/config/EcommerceUiLabels.properties
+++ b/components/ecommerce/config/EcommerceUiLabels.properties
@@ -74,6 +74,7 @@ EcommerceCartHas=Cart has
 EcommerceCartSummary=Cart Summary
 EcommerceCartTotal=Cart Total
 EcommerceCheckout=Checkout
+EcommerceCheckoutQuick=Quick Checkout
 EcommerceChildListTotalPrice=Child Lists Total Price
 EcommerceChildShoppingList=Child Shopping Lists
 EcommerceChooseAmount=Choose Amount
