Added Enabled label as requested by Adrian Crum
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4521 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/common/config/CommonUiLabels.properties
+++ b/components/common/config/CommonUiLabels.properties
@@ -131,6 +131,7 @@ CommonEmailPassword=Email Password
 CommonEmailTo=Email To
 CommonEmailType=Email Type
 CommonEmails=Emails
+CommonEnabled=Enabled
 CommonEndDateTime=End Date/Time
 CommonEventDate=EventDate
 CommonExpire=Expire
