--- a/build.xml
+++ b/build.xml
@@ -27,25 +27,25 @@
 
 <project name="OFBiz Main Build" default="build" basedir=".">
 
-    <filelist id="ordered-subdirs" dir="components"
+    <filelist id="framework-builds" dir="framework"
         files="minerva/build.xml,jotm/build.xml,entity/build.xml
                catalina/build.xml,jetty/build.xml,
                security/build.xml,service/build.xml,entityext/build.xml,
                datafile/build.xml,rules/build.xml,minilang/build.xml,
-               tests/build.xml,
+               tests/build.xml, 
                common/build.xml,workflow/build.xml,shark/build.xml,
                webapp/build.xml,guiapp/build.xml,widget/build.xml,
-               appservers/build.xml,webtools/build.xml,
+               appserver/build.xml,webtools/build.xml"/>
                    
-               content/build.xml,party/build.xml,
+    <filelist id="application-builds" dir="applications"
+        files="content/build.xml,party/build.xml,
                workeffort/build.xml,product/build.xml,marketing/build.xml,
                order/build.xml,manufacturing/build.xml,
                accounting/build.xml,ecommerce/build.xml,
                securityext/build.xml,
-               pos/build.xml,
-               example/build.xml"/>
+               pos/build.xml"/>
 
-    <filelist id="tests-subdirs" dir="."
+    <filelist id="test-builds" dir="."
         files="base/build.xml,components/entity/build.xml"/>
 
     <property name="site.dir" value="website"/>
@@ -110,19 +110,20 @@
     </target>
 
     <target name="clean-catalina" depends="">
-        <delete dir="components/catalina/work"/>
+        <delete dir="framework/catalina/work"/>
     </target>
 
     <target name="tests">
         <subant target="tests">
-            <filelist refid="tests-subdirs"/>
+            <filelist refid="test-builds"/>
         </subant>
     </target>
 
     <target name="clean">
         <subant target="clean">
             <filelist dir="." files="base/build.xml"/>
-            <filelist refid="ordered-subdirs"/>
+            <filelist refid="framework-builds"/>
+            <filelist refid="application-builds"/>
         </subant>
         <delete file="ofbiz.jar"/>
         <echo message="[clean] ========== Done Cleaning =========="/>
@@ -146,7 +147,8 @@
         </copy>
 
         <subant inheritall="false">
-            <filelist refid="ordered-subdirs"/>
+            <filelist refid="framework-builds"/>
+            <filelist refid="application-builds"/>
         </subant>
 
         <echo message="[build] ========== Done Building (Compile) =========="/>
@@ -161,7 +163,8 @@
 
         <subant target="docs">
             <filelist dir="." files="base/build.xml"/>
-            <filelist refid="ordered-subdirs"/>
+            <filelist refid="framework-builds"/>
+            <filelist refid="application-builds"/>
         </subant>
 
         <echo message="[docs] ========== Done Building (JavaDocs) =========="/>
