A bunch of missed references to the components directory
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4544 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -1,5 +1,5 @@
 ####
-# OFBiz UiLabel Properties used for the manufacturing components 
+# OFBiz UiLabel Properties used for the manufacturing component 
 #
 
 ManufacturingAddExistingRoutingTask=Add a existing RoutingTask
