--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -1,5 +1,5 @@
 ####
-# OFBiz UiLabel Properties used for the party components 
+# OFBiz UiLabel Properties used for the party component 
 #
 
 AccountingBillingAccount=Billing Accounts
