--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -1,5 +1,5 @@
 ####
-# OFBiz UiLabel Properties used for the product components 
+# OFBiz UiLabel Properties used for the product component 
 #
 
 AccountingBillingAcc=Billing Accounts
