--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -1,5 +1,5 @@
 ####
-# OFBiz UiLabel Properties to be shared in all components
+# OFBiz UiLabel Properties to be shared in all component
 #
 #  Copyright (c) 2003-2005 The Open For Business Project - www.ofbiz.org
 #
