--- a/specialized/opentravelsystem/config/PartyUiLabels.properties
+++ b/specialized/opentravelsystem/config/PartyUiLabels.properties
@@ -21,7 +21,7 @@ opentravelsystemLogout=Logout
 
 
 ####
-# OFBiz UiLabel Properties used for the party components 
+# OFBiz UiLabel Properties used for the party component 
 #
  en=English
  fr=French
