update for component -> application directory change (not completed yet)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4572 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/specialized/opentravelsystem/.subversion/config
+++ b/specialized/opentravelsystem/.subversion/config
@@ -12,7 +12,7 @@
 hansbak
 store-auth-creds = no
 
-### Section for configuring external helper applications.
+### Section for configuring external helper component.
 ### Set editor to the command used to invoke your text editor.
 ###   This will override the environment variables that Subversion
 ###   examines by default to find this information ($EDITOR, 
