removed IIOP config from JRMP props
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4578 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/jotm/config/jrmp.properties
+++ b/framework/jotm/config/jrmp.properties
@@ -4,7 +4,7 @@
 ####
 
 # activated protocols
-carol.protocols=jrmp,iiop
+carol.protocols=jrmp
 
 # start or not all non started name services
 carol.start.ns=true
@@ -29,24 +29,6 @@ carol.jrmp.context.factory=com.sun.jndi.rmi.registry.RegistryContextFactory
 
 # java.naming.provider.url property (JRMP)
 carol.jrmp.url=rmi://localhost:1099
-
-# portable remote object delegate class for this protocol (IIOP)
-carol.iiop.PortableRemoteObjectClass=com.sun.corba.se.internal.javax.rmi.PortableRemoteObject
-
-# Protocol Interceptors initializer class (IIOP)
-#carol.jrmp.interceptors=org.objectweb.carol.interceptor.myJRMPInterceptorInitializer
-
-# Name service class for this protocol (IIOP)
-carol.iiop.NameServiceClass=org.objectweb.carol.jndi.ns.IIOPCosNaming
-
-# java.naming.factory.initial property (IIOP)
-carol.iiop.context.factory=org.objectweb.carol.jndi.iiop.IIOPReferenceContextWrapperFactory
-
-# java.naming.provider.url property (IIOP)
-carol.iiop.url=iiop://localhost:2000
-
-# Protocol Interceptors initializer class (IIOP)
-#carol.iiop.interceptors=org.objectweb.carol.interceptor.myIIOPInterceptorInitializer
 
 # global jndi configuration
 carol.jndi.java.naming.factory.url.pkgs=org.objectweb.carol.jndi.enc
