--- a/framework/catalina/build.xml
+++ b/framework/catalina/build.xml
@@ -42,8 +42,7 @@
 
     <target name="classpath">
         <path id="local.class.path">
-            <fileset dir="${lib.dir}/server" includes="*.jar"/>
-            <fileset dir="${lib.dir}/common" includes="*.jar"/>
+            <fileset dir="${lib.dir}" includes="*.jar"/>
             <fileset dir="../../base/lib" includes="*.jar"/>
             <fileset dir="../../base/lib/commons" includes="*.jar"/>
             <fileset dir="../../base/build/lib" includes="*.jar"/>
