Added javolution library and started using for certain things; in some simple tests I didn't notice a significant speed increase, but better testing is needed and we really need to do some profiling, and this can be quite valuable as part of that; may even want to consider pooling GenericEntity/Value/PK objects like this does for FastMaps
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4598 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/.classpath
+++ b/.classpath
@@ -157,5 +157,6 @@
 	<classpathentry kind="lib" path="framework/catalina/lib/catalina.jar"/>
 	<classpathentry kind="lib" path="framework/catalina/lib/jmx.jar"/>
 	<classpathentry kind="lib" path="framework/catalina/lib/catalina-cluster.jar"/>
+	<classpathentry kind="lib" path="base/lib/javolution.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
