several opentravelsystem updates and adding of a proper generated demo data file
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4616 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/specialized/opentravelsystem/webapp/hotelfrontend/WEB-INF/web.xml
+++ b/specialized/opentravelsystem/webapp/hotelfrontend/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 
     <context-param>
         <param-name>webSiteId</param-name>
-        <param-value>HotelDemoStore</param-value>
+        <param-value>HotelDemoWebsite</param-value>
     <description>A unique ID used to look up the WebSite entity to get information about catalogs, etc.</description>
     </context-param>
     <context-param>
