--- a/specialized/wholesale/webapp/wholesale/WEB-INF/web.xml
+++ b/specialized/wholesale/webapp/wholesale/WEB-INF/web.xml
@@ -29,12 +29,12 @@
 
     <context-param>
         <param-name>webSiteId</param-name>
-        <param-value>DemoWholesale</param-value>
+        <param-value>WholesaleStore</param-value>
     <description>A unique ID used to look up the WebSite entity to get information about catalogs, etc.</description>
     </context-param>
     <context-param>
         <param-name>localDispatcherName</param-name>
-        <param-value>ecommerce</param-value>
+        <param-value>wholesale</param-value>
         <description>A unique name used to identify/recognize the local dispatcher for the Service Engine</description>
     </context-param>
     <context-param>
@@ -51,7 +51,7 @@
     <filter>
         <filter-name>ContextFilter</filter-name>
         <display-name>ContextFilter</display-name>
-        <filter-class>org.ofbiz.webapp.control.ContextFilter</filter-class>
+        <filter-class>org.ofbiz.content.webapp.control.ContextFilter</filter-class>
         <init-param>
             <param-name>disableContextSecurity</param-name>
             <param-value>N</param-value>
@@ -74,9 +74,9 @@
             <url-pattern>/*</url-pattern>
     </filter-mapping> 
     
-    <listener><listener-class>org.ofbiz.webapp.control.ControlEventListener</listener-class></listener>
+    <listener><listener-class>org.ofbiz.content.webapp.control.ControlEventListener</listener-class></listener>
     <!-- NOTE: not all app servers support mounting implementations of the HttpSessionActivationListener interface -->
-    <!-- <listener><listener-class>org.ofbiz.webapp.control.ControlActivationEventListener</listener-class></listener> -->
+    <!-- <listener><listener-class>org.ofbiz.content.webapp.control.ControlActivationEventListener</listener-class></listener> -->
 
     <!-- this listener will save any abandoned cart info -->
     <listener><listener-class>org.ofbiz.order.shoppingcart.CartEventListener</listener-class></listener>
@@ -87,7 +87,7 @@
         <servlet-name>ControlServlet</servlet-name>
         <display-name>ControlServlet</display-name>
         <description>Main Control Servlet</description>
-        <servlet-class>org.ofbiz.webapp.control.ControlServlet</servlet-class>
+        <servlet-class>org.ofbiz.content.webapp.control.ControlServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>      
     <!-- un-comment for Worldpay
