Added a bunch of stuff for new picklist functionality; now have the underlying stuff all moved over to create picklists and track items already on a picklist and such through the Picklist and related entities; still don't have reports updated or functionality to maintain picklist information like status, role assignments, moving bins to other picklists, changing bin numbers, etc
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4649 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -300,6 +300,7 @@ ProductCreateNewProdCatalog=Create NewProd Catalog
 ProductCreateNewProduct=Create New Product
 ProductCreateNewProductContent=Create New Product Content
 ProductCreateNewProductStore=Create New Product Store
+ProductCreatePicklist=Create Picklist
 ProductCreateProduct=Create Product
 ProductCreateProductFeatureInThisCategory=Create Product Feature in This Category
 ProductCreateProductInCategoryCheckExisting=Create Product in Category Check Existing
@@ -551,7 +552,7 @@ ProductNoSelectableFeaturesFound=No selectable Features found . Please create so
 ProductNoShipmentsFound=No shipments found
 ProductNotAvailable=Not Available
 ProductNoteForContentOptions=NOTE: For content options, use the Content tab.
-ProductNoteKeywordsAutomaticallyCreated :Keywords are automatically created when product information is changed, but you may manually CREATE or DELETE keywords here as well.
+ProductNoteKeywordsAutomaticallyCreated=Keywords are automatically created when product information is changed, but you may manually CREATE or DELETE keywords here as well.
 ProductNoteOnItemId=NOTE on Item ID
 ProductNoteOnPartyId=NOTE on Party ID
 ProductNoteOrderStatus=NOTE: Order Status is
@@ -606,10 +607,10 @@ ProductPerUnitPrice=Per Unit Price
 ProductPick=Pick
 ProductPickFirst=Pick first
 ProductPicking=Picking
+ProductPicklistOptions=Picking Options
+ProductPicklistManage=Manage Picklists
 ProductPickPackWarnings=Pick Pack Warnings
 ProductPickStarted=Pick started
-ProductPicksInProgress=Picks in progress
-ProductPicksStartedInProgress=Picks started/In progress
 ProductPhoneNumbers=Phone Numbers
 ProductPhysicalInventoryVariance=(This can be changed by doing a physical inventory variance below)
 ProductPhysicalInventoryVariances=Physical Inventory Variances
@@ -712,7 +713,7 @@ ProductRedExplanation=<b style="color: red;">Red</b> date/time entries denote th
 ProductReInduceKeywords=Re-induce Keywords
 ProductRejectedReason=Rejected Reason
 ProductRejectionReason=Rejection Reason
-ProducRelationship=Relationship
+ProductRelationship=Relationship
 ProductRemoveExpiredProductMembers=Remove Expired Product Members
 ProductReorderQuantity=Reorder Quantity
 ProductReplaceOriginal=Replace Original
@@ -800,7 +801,7 @@ ProductStandard=Standard
 ProductState=State
 ProductStatus=Status
 ProductStockMoves=Stock Moves
-ProductStockMovesNeeded=Stock Moves needed
+ProductStockMovesNeeded=Stock Moves Needed
 ProductStoresFor=Stores For
 ProductStore=Store
 ProductStoreId=Store ID
