Order content related uilabels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4654 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -184,6 +184,8 @@ OrderItemsReturned=Items Returned
 OrderItemsSubTotal=Items SubTotal
 OrderItemTotal=Item Total
 OrderInvoices=Invoices
+OrderImage=Image
+OrderViewImage=View Image
 OrderLookupOrder=Lookup Order(s)
 OrderLookupReturn=Lookup Return(s)
 OrderNoGiftWrap=No Gift Wrap
