added a jetty configuration file; still need to edit the component-load.xml file in the framework directory
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4657 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/src/start/org/ofbiz/base/start/jetty.properties
+++ b/base/src/start/org/ofbiz/base/start/jetty.properties
@@ -1,11 +1,11 @@
 ####
 # OFBiz Startup Application Settings
-# $Id$
+# $Id: start.properties 3935 2004-11-16 16:40:44Z jaz $
 ####
 
 # --- By default we will locate the file using the java.home set by java (executable)
 #java.tools.jar=
-java.tools.jar.required=false
+java.tools.jar.required=true
 
 # --- By default we will use the current directory
 #ofbiz.home=
@@ -31,7 +31,7 @@ ofbiz.base.jar=base/build/lib/ofbiz-base.jar
 ofbiz.log.dir=logs
 
 # --- Location (relative to ofbiz.home) for (normal) container configuration
-ofbiz.container.config=base/config/ofbiz-containers.xml
+ofbiz.container.config=base/config/jetty-containers.xml
 
 # --- StartupLoader implementations to load (in order)
 ofbiz.start.loader1=org.ofbiz.base.container.ContainerLoader
