Added changes from Chris Howe, conversion to screen widget usage for the ProdCatalog pages; also did some cleanups and finished the FindProdCatalog screen conversion
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4666 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -246,7 +246,7 @@ ProductCatalogId=Catalog [ID]
 ProductCatalogManagerApplication=Catalog Manager Application
 ProductCatalogManagerIsFor=This application is primarily intended for those responsible for the maintenance of product catalog related information
 ProductCatalogName=Catalog Name
-ProductCatalogNameId=Catalog ; Name ; [Id]
+ProductCatalogNameId=Catalog Name [Id]
 ProductCatalogs=Catalogs
 ProductCatalogViewPermissionError=You do not have permission to view this page. ("CATALOG_VIEW" or "CATALOG_ADMIN" needed)
 ProductCategories=Categories
