Added patch from Jacopo Cappellato to show manufacturing related information for products in the catalog manager; Jira #OFBIZ-171
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4668 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -273,6 +273,7 @@ ProductChooseFeatureGroup=Choose a Feature Group
 ProductChooseTopCategory=Choose Top Category
 ProductComments=Comments
 ProductCompanySubtitle=Part of the Open For Business Family of Open Source Software
+ProductComponents=Components
 ProductConditions=Conditions
 ProductConfirmSelectedMoves=Confirm selected moves
 ProductConfirmShipmentUps=Confirm Shipment with UPS
@@ -486,9 +487,11 @@ ProductLocationsFor=Location(s) for
 ProductLongDescription=Long Description
 ProductLookupShipment=Lookup Shipment(s)
 ProductLotId=Lot ID
+ProductLowLevelCode=Low Level Code
 ProductMain=Main
 ProductMakeTop=MakeTop
 ProductMediumImage=Medium Image
+ProductManufacturing=Manufacturing
 ProductMethod=Method
 ProductMethodType=Method Type
 ProductMinimumStock=Minimum Stock
@@ -740,6 +743,7 @@ ProductRollups=Rollups
 ProductRollupShort=Rollup
 ProductRouteSegment=Route Segment
 ProductRouteSegments=Route Segments
+ProductRoutings=Routings
 ProductRuleId=Rule ID
 ProductRuleName=Rule Name
 ProductRuleNameFromDateThruDate=Rule Name, From Date, Thru Date
