implemented a minimum item price for tax calc. Now only calcs tax on items which meet this mimimum price. Note this is a PK change and will require you to delete and re-enter your tax information when upgrading.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4679 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -494,10 +494,12 @@ ProductMediumImage=Medium Image
 ProductManufacturing=Manufacturing
 ProductMethod=Method
 ProductMethodType=Method Type
+ProductMinimumItemPrice=Minimum Item Price
 ProductMinimumStock=Minimum Stock
 ProductMinimumStockAndMoveQuantity=Minimum Stock &amp; Move Quantity
 ProductMinimumStockReorderQuantityDaysToShip=Minimum Stock & Reorder Quantity & Days To Ship
 ProductMinimumPurchase=Minimum Purchase
+ProductMinItemPrice=Min Item Price
 ProductMinMax=0 min -> up to max; 0 max -> from min and up
 ProductMinMaxSpan=Min - Max (span)
 ProductMinPurchase=Min Purchase
