Added patch from Jacopo to include manufacturing data about products, including jobs where the product is consumed, and jobs where the product is produced
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4708 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -428,6 +428,8 @@ ProductIfNotSpecifiedDefaultsIsProductdetail=If not specified defaults to
 ProductIncludePromotions=Include In Promotions
 ProductIncludeSubCategories=Include Sub-Categories
 ProductIncomingShipments=Incoming Shipments
+ProductIncomingProductionRuns=Incoming Production Runs
+ProductOutgoingProductionRuns=Outgoing Production Runs
 ProductInitialInventoryItemStatus=Initial Inventory Item Status
 ProductInputOperatorValue=Input, Operator & Value
 ProductInsertDefaultImageUrl=Insert Default Image URL
