Some labels and some little clean ups.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4730 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -4,6 +4,7 @@
 
 AccountingAccountNumber=Account Number
 AccountingAccountType=Account Type
+AccountingAgreement=Agreement
 AccountingBankName=Bank Name
 AccountingBillingAccount=Billing Acct
 AccountingBillingAccountOnly=Pay With Billing Account Only
@@ -109,6 +110,7 @@ EcommerceIncludes=Includes
 EcommerceItem=Item
 EcommerceOnSale=On Sale
 EcommercePieces=Pieces
+EcommerceQuickAdd=Quick Add
 EcommerceRanking=Ranking
 EcommerceSpecialOffers=Special Offers
 EcommerceToCart=to Cart
@@ -211,6 +213,7 @@ OrderOrderEntryPaymentSettings=Order Entry Payment Settings
 OrderOrderEntryShipToSettings=Order Entry Ship-To Settings
 OrderOrderFor=Order for
 OrderOrderFound=Order(s) Found
+OrderOrderHeaderInfo=Order Header Info
 OrderOrderId=Order Id
 OrderOrderItems=Order Items
 OrderOrderList=Order List
@@ -220,6 +223,7 @@ OrderOrderOptionSettings=Order Option Settings
 OrderOrderPurchaseToBeScheluded=Order Purchase To Be Scheluded
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
+OrderOrderShortcuts=Shortcuts
 OrderOrderTotal=Order Total
 OrderOrderType=Order Type
 OrderPaymentOfflineCheckMoney=Offline Payment: Check/Money Order
@@ -241,6 +245,7 @@ OrderReturnFromParty=Return From Party
 OrderReturnHeader=Return Header
 OrderReturnItems= Return Items
 OrderReturnToFacility=Return To Facility
+OrderReviewOrder=Review Order
 OrderSalesOrder=Sales Order
 OrderSalesTax=Sales Tax
 OrderSelectPartyToOrder=Select type of party to associate to order
@@ -278,6 +283,7 @@ OrderShipAfterDate=Ship After Date
 
 
 PageTitleLogin=Login
+PartyChangeParty=Change Party
 PartyFindParty=Find Party
 PartyLookupParty=Lookup Party
 PartyNoSupplier=No Supplier
