Added more usage of Javolution objects; changed Control Servlet config to use a single cache instead of 4, and loads with a single object and a bit more efficiently now too
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4741 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -47,10 +47,7 @@ script.BshBsfParsedCache.expireTime=10000
 
 webapp.BsfEvents.expireTime=10000
 webapp.JasperReportsCompiled.expireTime=10000
-webapp.ConfigXMLReader.Config.expireTime=10000
-webapp.ConfigXMLReader.Handler.expireTime=10000
-webapp.ConfigXMLReader.Request.expireTime=10000
-webapp.ConfigXMLReader.View.expireTime=10000
+webapp.ControllerConfig.expireTime=10000
 
 widget.form.locationResource.expireTime=10000
 widget.form.webappResource.expireTime=10000
