A whole bunch of HTML updates to use CSS layouts instead of table-based; all side-bar elements in ecommerce are now updated this way; also includes a number of other cleanups and improvements; also includes separation of ecommerce CSS properties to a separate file called ecommain.css; note that the ProductStore record referred to the old css file and needs to be updated to refer to this new file, or have the stylesheet field cleared out so that the default one will be used
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4748 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -91,6 +91,7 @@ EcommerceItems=Items
 EcommerceItemTotal=Item Total
 EcommerceLastViewed=Last Viewed
 EcommerceLastCategories=Last Categories
+EcommerceLastContent=Last Content
 EcommerceLastProducts=Last Products
 EcommerceLastSearches=Last Searches
 EcommerceLength=Length
